# cvmd

./: .gitignore  README.md  pyproject.toml
.github/workflows/: auto-publish.yml  python-publish.yml
cvmd/: __init__.py  __init__.pyi  registry.py  types.py
cvmd/detr/: __init__.py  deformable_detr.py  detr.py  rfdetr.py
cvmd/utils/: imageutils.py  ray_infer.py  torchutils.py  windows.py
cvmd/yolo/: metrics.py  ops.py  v5ops.py  yolov11.py  yolov12.py  yolov5.py  yolov8.py
doc/: README_zh.md  guide.md  guide_zh.md
test/: conftest.py  test_detect_with_windows.py  test_inference.py  test_ray.py  test_yolov11_detect.py  test_yolov11_segment.py  test_yolov5_detect.py  test_yolov5_segment.py  test_yolov8_segment.py  utils.py
tools/: export_deformable_detr.py  export_detr.py  export_rfdetr.py
